@@ -172,11 +172,24 @@ public class VectorUtilBenchmark {
   }
 
   @Benchmark
+  public float[] l2Normalize() {
+    return VectorUtil.l2normalize(floatsA, false);
+  }
+
+  @Benchmark
   @Fork(
       value = 15,
       jvmArgsPrepend = {"--add-modules=jdk.incubator.vector"})
   public float floatCosineVector() {
     return VectorUtil.cosine(floatsA, floatsB);
+  }
+
+  @Benchmark
+  @Fork(
+      value = 15,
+      jvmArgsPrepend = {"--add-modules=jdk.incubator.vector"})
+  public float[] l2NormalizeVector() {
+    return VectorUtil.l2normalize(floatsA, false);
   }
 
   @Benchmark
